--- a/platformio_tasmota32.ini
+++ b/platformio_tasmota32.ini
@@ -19,7 +19,7 @@ default_envs                =  ${build_envs.default_envs}
 ;                tasmota32-BR
 ;                tasmota32-CN
 ;                tasmota32-CZ
-;                tasmota32-DE
+                 tasmota32-DE
 ;                tasmota32-ES
 ;                tasmota32-FR
 ;                tasmota32-FY
@@ -54,7 +54,7 @@ board_build.flash_mode      = ${common.board_build.flash_mode}
 board_build.f_flash         = ${common.board_build.f_flash}
 board_build.f_cpu           = ${common.board_build.f_cpu}
 monitor_speed               = 115200
-upload_port                 = ${common.upload_port}
+upload_port                 = Com3
 upload_resetmethod          = ${common.upload_resetmethod}
 upload_speed                = 921600
 extra_scripts               = ${common.extra_scripts}
@@ -64,7 +64,7 @@ shared_libdeps_dir          = lib
 lib_extra_dirs              =
                               lib/libesp32
 ; uncomment the following line if you need Bluetooth, Homekit or TTGO Watch libraries in your Tasmota32 build
-;                              lib/libesp32_div
+                              lib/libesp32_div
 ; uncomment the following line if you want to use Epaper driver epidy in your Tasmota32 build
 ;                              lib/libesp32_epdiy
                               lib/lib_basic
