--- a/platformio.ini
+++ b/platformio.ini
@@ -26,7 +26,7 @@ default_envs =
 ;                tasmota-BR
 ;                tasmota-CN
 ;                tasmota-CZ
-                 tasmota-DE
+;                 tasmota-DE
 ;                tasmota-ES
 ;                tasmota-FR
 ;                tasmota-FY
@@ -85,7 +85,7 @@ monitor_port                = COM5
 upload_speed                = 115200
 ; *** Upload Serial reset method for Wemos and NodeMCU
 upload_resetmethod          = nodemcu
-upload_port                 = COM5
+upload_port                 = Com3
 extra_scripts               = ${scripts_defaults.extra_scripts}
 lib_ldf_mode                = chain
 lib_compat_mode             = strict
